@@ -62,6 +62,6 @@ p {
 
 blockquote {
     margin-bottom: $generic-margin-bottom;
-    padding: 1rem 1.5rem;
-    border-left: 3px solid $border-color;
+    padding: $blockquote-padding-y $blockquote-padding-x;
+    border-left: $blockquote-border-left-width solid $blockquote-border-left-color;
 }
